--- a/.gitignore
+++ b/.gitignore
@@ -2,6 +2,8 @@ vscode-extension-samples-main/
 huggingface-vscode-chat-main/
 vscode-copilot-chat-main/
 
+config.yaml
+
 custom-copilot-provider/node_modules/
 
 *.vsix
